--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Lista de Cursos de DevOps de Alura</title>
+        <h1>Probando un error</h1>
     </head>
     <body>
         <ul>
